@@ -64,6 +64,9 @@ class DeviceGroup
     public $FileBlockingProfileStore = null;
 
     /** @var SecurityProfileStore */
+    public $DataFilteringProfileStore = null;
+
+    /** @var SecurityProfileStore */
     public $WildfireProfileStore = null;
 
 
@@ -179,6 +182,9 @@ class DeviceGroup
 
         $this->FileBlockingProfileStore = new SecurityProfileStore($this, "FileBlockingProfileStore");
         $this->FileBlockingProfileStore->name = 'FileBlocking';
+
+        $this->DataFilteringProfileStore = new SecurityProfileStore($this, "DataFilteringProfileStore");
+        $this->DataFilteringProfileStore->name = 'DataFiltering';
 
         $this->WildfireProfileStore = new SecurityProfileStore($this, "WildfireProfileStore");
         $this->WildfireProfileStore->name = 'WildFire';
@@ -351,6 +357,13 @@ class DeviceGroup
             $tmproot = DH::findFirstElement('file-blocking', $this->securityProfilebaseroot);
             if( $tmproot !== FALSE )
                 $this->FileBlockingProfileStore->load_from_domxml($tmproot);
+
+            //
+            // DataFiltering Profile extraction
+            //
+            $tmproot = DH::findFirstElement('data-filtering', $this->securityProfilebaseroot);
+            if( $tmproot !== FALSE )
+                $this->DataFilteringProfileStore->load_from_domxml($tmproot);
 
             //
             // vulnerability Profile extraction
