@@ -137,6 +137,9 @@ class PanoramaConf
     public $FileBlockingProfileStore = null;
 
     /** @var SecurityProfileStore */
+    public $DataFilteringProfileStore = null;
+
+    /** @var SecurityProfileStore */
     public $WildfireProfileStore = null;
 
 
@@ -224,6 +227,9 @@ class PanoramaConf
 
         $this->FileBlockingProfileStore = new SecurityProfileStore($this, "FileBlockingProfileStore");
         $this->FileBlockingProfileStore->name = 'FileBlocking';
+
+        $this->DataFilteringProfileStore = new SecurityProfileStore($this, "DataFilteringProfileStore");
+        $this->DataFilteringProfileStore->name = 'DataFiltering';
 
         $this->WildfireProfileStore = new SecurityProfileStore($this, "WildfireProfileStore");
         $this->WildfireProfileStore->name = 'WildFire';
@@ -446,6 +452,13 @@ class PanoramaConf
                 #if( $tmprulesroot !== FALSE )
                 $this->FileBlockingProfileStore->load_from_domxml($tmproot);
             }
+
+            //
+            // DataFiltering Profile extraction
+            //
+            $tmproot = DH::findFirstElement('data-filtering', $this->securityProfilebaseroot);
+            if( $tmproot !== FALSE )
+                $this->DataFilteringProfileStore->load_from_domxml($tmproot);
 
             //
             // vulnerability Profile extraction
