@@ -57,6 +57,9 @@ class VirtualSystem
     public $FileBlockingProfileStore = null;
 
     /** @var SecurityProfileStore */
+    public $DataFilteringProfileStore = null;
+
+    /** @var SecurityProfileStore */
     public $WildfireProfileStore = null;
 
 
@@ -177,6 +180,9 @@ class VirtualSystem
 
         $this->FileBlockingProfileStore = new SecurityProfileStore($this, "FileBlockingProfileStore");
         $this->FileBlockingProfileStore->name = 'FileBlocking';
+
+        $this->DataFilteringProfileStore = new SecurityProfileStore($this, "DataFilteringProfileStore");
+        $this->DataFilteringProfileStore->name = 'DataFiltering';
 
         $this->WildfireProfileStore = new SecurityProfileStore($this, "WildfireProfileStore");
         $this->WildfireProfileStore->name = 'WildFire';
@@ -377,6 +383,15 @@ class VirtualSystem
                 if( $tmproot !== FALSE )
                 {
                     $this->FileBlockingProfileStore->load_from_domxml($tmproot);
+                }
+
+                //
+                // DataFiltering Profile extraction
+                //
+                $tmproot = DH::findFirstElement('data-filtering', $this->securityProfilebaseroot);
+                if( $tmproot !== FALSE )
+                {
+                    $this->DataFilteringProfileStore->load_from_domxml($tmproot);
                 }
 
                 //
