@@ -1,0 +1,109 @@
+<?php
+
+
+/**
+ * @property $_ip4Map IP4Map cached ip start and end value for fast optimization
+ */
+class DataFilteringProfileStore
+{
+    use ReferenceableObject;
+    use PathableName;
+    use XmlConvertible;
+    use ObjectWithDescription;
+
+    /** @var string|null */
+    protected $value;
+
+    public $_all;
+
+    /** @var SecurityProfileStore|null */
+    public $owner;
+
+
+    /**
+     * you should not need this one for normal use
+     * @param string $name
+     * @param SecurityProfileStore $owner
+     * @param bool $fromXmlTemplate
+     */
+    function __construct($name, $owner, $fromXmlTemplate = FALSE)
+    {
+        $this->owner = $owner;
+
+        if( $fromXmlTemplate )
+        {
+            $doc = new DOMDocument();
+            $doc->loadXML(self::$templatexml, XML_PARSE_BIG_LINES);
+
+            $node = DH::findFirstElementOrDie('entry', $doc);
+
+            $rootDoc = $this->owner->securityProfileRoot->ownerDocument;
+            $this->xmlroot = $rootDoc->importNode($node, TRUE);
+            $this->load_from_domxml($this->xmlroot);
+
+            $this->name = $name;
+            $this->xmlroot->setAttribute('name', $name);
+        }
+
+        $this->name = $name;
+    }
+
+    /**
+     * @param string $newName
+     * @return bool
+     */
+    public function setName($newName)
+    {
+        $ret = $this->setRefName($newName);
+
+        if( $this->xmlroot === null )
+            return $ret;
+
+        $this->xmlroot->setAttribute('name', $newName);
+
+        return $ret;
+    }
+
+    /**
+     * @param string $newName
+     */
+    public function API_setName($newName)
+    {
+        $c = findConnectorOrDie($this);
+        $xpath = $this->getXPath();
+        $c->sendRenameRequest($xpath, $newName);
+        $this->setName($newName);
+    }
+
+    /**
+     * @param DOMElement $xml
+     * @return bool TRUE if loaded ok, FALSE if not
+     * @ignore
+     */
+    public function load_from_domxml(DOMElement $xml)
+    {
+        $secprof_type = "data-filtering";
+        $this->xmlroot = $xml;
+
+        $this->name = DH::findAttribute('name', $xml);
+        if( $this->name === FALSE )
+            derr("DataFiltering SecurityProfile name not found\n");
+
+        return TRUE;
+    }
+
+    public function display()
+    {
+        print "     * " . get_class($this) . " '" . $this->name() . "'    \n\n";
+
+        //Todo: continue for print out
+
+
+        #print "\n\n";
+    }
+
+
+    static $templatexml = '<entry name="**temporarynamechangeme**"></entry>';
+
+}
+
